--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ansi-regex": "^4.1.1",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.5",
